@@ -1,0 +1,23 @@
+#
+# $Header$
+#
+
+
+package require tcltest 2.2
+namespace import -force ::tcltest::*
+
+eval ::tcltest::configure $argv
+
+
+
+test errordoc-1.1 {adp template} -setup {
+    ns_register_proc GET /400error ns_returnbadrequest "uh-oh"
+} -body {
+    nstest_http -getbody 1 GET /400error
+} -cleanup {
+    ns_unregister_proc GET /400error
+} -result {400 template}
+
+
+
+cleanupTests
